@@ -800,6 +800,7 @@ test_22() {
 	echo Client mount before any osts are in the logs
 	mount_client $MOUNT
 	check_mount && return 41
+	umount_client $MOUNT
 	pass
 
 	echo Client mount with ost in logs, but none running
